--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,9 +14,9 @@ jobs:
     - name: 'Checkout Repository'
       uses: 'actions/checkout@v2'
     - name: 'Make Some Changes'
-      run: 'echo ${{ github.event.inputs.version }}'
-    # - name: 'Push Documentation Changes And Tag'
-    #   uses: stefanzweifel/git-auto-commit-action@v4
-    #   with:
-    #     commit_message: 'Update documentation for release ${{ github.event.inputs.version }}'
-    #     tagging_message: 'v${{ github.event.inputs.version }}'
+      run: 'echo ${{ github.event.inputs.version }} >> releases.txt'
+    - name: 'Push Documentation Changes And Tag'
+      uses: 'stefanzweifel/git-auto-commit-action@v4'
+      with:
+        commit_message: 'Update documentation for release ${{ github.event.inputs.version }}'
+        tagging_message: 'v${{ github.event.inputs.version }}'
