--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,6 +13,8 @@ jobs:
     steps:
     - name: 'Checkout Repository'
       uses: 'actions/checkout@v2'
+      with:
+        ref: '${{ github.head_ref }}'
     - name: 'Make Some Changes'
       run: 'echo ${{ github.event.inputs.version }} >> releases.txt'
     - name: 'Push Documentation Changes And Tag'
