--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,4 +21,4 @@ jobs:
       uses: 'stefanzweifel/git-auto-commit-action@v4'
       with:
         commit_message: 'Update documentation for release ${{ github.event.inputs.version }}'
-        tagging_message: 'v${{ github.event.inputs.version }}'
+        # tagging_message: 'v${{ github.event.inputs.version }}'
